# TakeSCXPack

./: CMakeLists.txt  README.md  launch.vs.json
src/: dllmain.cpp
